--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
 }
 body{
     margin: 0;
-    font-family: sans-serif;
+    font-family: "Outfit", sans-serif;
 }
 img{
     display: block;
@@ -18,4 +18,108 @@ ul{
     padding-left: 0;
     margin-top: 0;
     margin-bottom: 0;
+}
+.background{
+    width: 100%;
+    height: 700px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color:#0D192C;
+}
+.card-nft{
+    width: 327px;
+    height: 543px;
+    padding: 24px;
+    border-radius: 15px;
+    background-color: #15263F;
+    position: relative;
+    isolation: isolate;
+}
+.img-eth{
+    border-radius: 8px;
+    z-index: 0;
+}
+.eye{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 8px;
+    background-color: #00FFF8;
+    opacity: 0;
+}
+.eye img{
+    margin: auto;
+    margin-top: 40%;
+}
+.eye:hover{
+    opacity: 0.8;
+}
+.g-img{
+    position: relative;
+}
+.title{
+    color: white;
+    font-size: 22px;
+    font-weight: 600;
+    font-style: normal;
+}
+.g-text{
+    color: #8BACD9;
+    font-size: 18px;
+    font-weight: 300;
+    font-style: normal;
+}
+.info{
+    height: 19px;
+    width: 100%;
+    display:flex;
+}
+.profile::after{
+    content: "";
+    position: absolute;
+    height: 1px;
+    width: 279px;
+    background-color: #2E405A;
+    top: -17px;  
+}
+.info p{
+    margin: 0;
+    padding-left: 6px;
+}
+.right{
+    margin-left: auto;
+}
+.info .info-profile{
+    font-size: 15;
+}
+.price{
+    color: #00FFF8;
+    font-weight: 600;
+    font-style: normal;
+}
+.days, .info-profile{
+    color: #8BACD9;
+    font-weight: 400;
+    font-style: normal;
+}
+.profile{
+    display: flex;
+    height: 33px;
+    position: absolute;
+    bottom: 24px;
+}
+
+.img-profile{
+    border-radius: 50%;
+    border: 1px solid white;
+}
+.info-profile{
+    margin: auto 0 auto 15px;
+}
+.info-profile span{
+    color: white;
+}
+.info-profile span:hover, .title:hover{
+    color: #00FFF8;
 }
